# gladius

./: CHANGELOG.md  README.md  app.py  pyproject.toml
backup-241029-0/: pyproject.toml
backup-241029-0/examples/: hello_world_1.py  multi_page_0.py  pico_0.py  pico_1.py
backup-241029-0/gladius/: __init__.py  component.py  consts.py  daisyui.py  pico.py
examples/: daisyui_layout_0.py  daisyui_layout_artboard_0.py  daisyui_layout_divider_0.py  daisyui_layout_footer_0.py  hello_world_0.py  hello_world_1.py  hello_world_2.py  hello_world_pico_0.py  multi_page_0.py  pico_0.py  pico_1.py
gladius/: component.py  consts.py  daisyui.py  gladius.py  html5.py  pico.py
static/: multi-path-deps.js
swordfish/: __init__.py  component.py  daisyui.py  swordfish.py
