[tool.poetry]
name = "gladius"
version = "0.1.11"
description = "Full-stack web apps in Python"
homepage = "https://github.com/mtasic85/gladius"
repository = "https://github.com/mtasic85/gladius"
authors = ["Marko Tasic <mtasic85@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gladius"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.5"}
uvloop = "^0.17.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
